# frads

./: .gitignore  .jchat.json  404.html  CNAME  MANIFEST.in  Makefile  README.md  eplus.json  eplusmtr.csv  eplusout.audit  eplusout.bnd  eplusout.csv  eplusout.dxf  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.mtr  eplusout.rdd  eplusout.sql  eplusssz.csv  eplustbl.htm  epluszsz.csv  epmodel.json  index.html  license.txt  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sqlite.err
.github/workflows/: codeql-analysis.yml  deploy_docs.yml  main.yml  python-publish.yml
Examples/dynamic_shading_control_daylight_dimming/: USA_CA_Oakland.Intl.AP.724930_TMY3.epw  dynamic_shading_control_daylight_dimming.py  igsdb_product_7404.json  igsdb_product_7405.json  igsdb_product_7407.json
css/: extra.css
doc/source/: api.rst  commandline.rst  conf.py  index.rst
docs/: how-to-guides.md  index.md  install.md  requirements.txt  why.md
docs/css/: extra.css
docs/how-to/: guide5.md  guide6.md  guide7.md  guide8.md  guide_ep1.md  guide_ep2.md  guide_ep3.md  guide_rad1.md  guide_rad2.md  guide_rad3.md  guide_rad6.md  guide_rad7.md  guide_radep1.md  guide_radep2.md  guide_radep3.md  guide_radep4.md  index.md
docs/manual/: gencolorsky.md  index.md
docs/ref/: config.md  eplus.md  epmodel.md  epsetup.md  fivephase.md  geom.md  index.md  matrix.md  sky.md  threephase.md  twophase.md  utils.md  window.md
docs/source/: api.rst  commandline.rst  conf.py  index.rst  library.rst
frads/: __init__.py  bsdf.py  cli.py  color.py  color_data.py  ep2rad.py  epjson2rad.py  eplus.py  eplus_model.py  eprad.py  epw2wea.py  gencolorsky.py  genfmtx.py  genglazing.py  genmtx.py  geom.py  geombsdf.py  getepw.py  makesky.py  matrix.py  methods.py  mfacade.py  mrad.py  mtxmethod.py  mtxmult.py  ncp.py  parsers.py  radgeom.py  radmtx.py  radutil.py  raycall.py  room.py  sky.py  types.py  util.py  utils.py  window.py
frads/cli/: gen.py  mrad.py  test.py
frads/data/: epw_url.csv  mrad_default.cfg  radoption.cfg
frads/eplus/: __init__.py  ep2rad.py  eplus.py
how-to/: index.html
how-to/guide_ep1/: index.html
how-to/guide_ep2/: index.html
how-to/guide_ep3/: index.html
how-to/guide_rad1/: index.html
how-to/guide_rad2/: index.html
how-to/guide_rad3/: index.html
how-to/guide_rad6/: index.html
how-to/guide_rad7/: index.html
how-to/guide_radep1/: index.html
how-to/guide_radep2/: index.html
how-to/guide_radep3/: index.html
how-to/guide_radep4/: index.html
install/: index.html
manual/: index.html
manual/gencolorsky/: index.html
manual/mrad/: index.html
ref/config/: index.html
ref/eplus/: index.html
ref/fivephase/: index.html
ref/geom/: index.html
ref/matrix/: index.html
ref/sky/: index.html
ref/threephase/: index.html
ref/twophase/: index.html
ref/utils/: index.html
ref/window/: index.html
search/: search_index.json
sundry/: parse_t4_BSDF.py  parsettree.py  varays.py
test/: RefBldgMediumOfficeNew2004_Chicago.idf  _test_genfmtx.py  _test_genmtx.py  _test_mrad.py  conftest.py  five_phase.cfg  five_phase2.cfg  test_color.py  test_ep2rad.py  test_epjson2rad.py  test_eplus.py  test_eprad.py  test_genfmtx.py  test_genmtx.py  test_geom.py  test_getwea.py  test_makesky.py  test_matrix.py  test_methods.py  test_mrad.py  test_mtxmult.py  test_ncp.py  test_parsers.py  test_radutil.py  test_raycall.py  test_room.py  test_sky.py  test_util.py  test_utils.py  test_window.py  three_phase.cfg  two_phase.cfg
test/Objects/: ceiling.rad  cubefabric.rad  cubeframe.rad  desks.rad  ground.rad  materials.mat  overhang.rad  windowframe.rad
test/Resources/: CmplxGlz_SingleZone_DoubleClearAir.epJSON  RefBldgMediumOfficeNew2004_Chicago.epJSON  RefBldgMediumOfficeNew2004_southzone.idf  ec60.rad  (+6 more)
tests/: _test_genmtx.py  five_phase.cfg  test_ep2rad.py  test_eplus.py  test_geom.py  test_matrix.py  test_methods.py  test_ncp.py  test_room.py  test_sky.py  test_utils.py  test_window.py
why/: index.html
(+31 files in other folders)
