# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frads"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "LBNL", email = "taoningwang@lbl.gov"},
]
description = "Framework for lighting and energy simulations"
dependencies = [
    "numpy>=1.24.4",
    "pyradiance >= 0.1.2",
    "scipy~=1.10.1",
    "pyenergyplus",
    "pywincalc>=3.1.0",
]
license = "BSD-3-Clause-LBNL"
requires-python = ">= 3.8"

[project.scripts]
gen = "frads.cli:gen"
mrad = "frads.cli:mrad"

[tool.hatch.version]
path = "frads/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-material>=9.1.18",
]

[tool]
rye = { dev-dependencies = [
    "pytest>=7.4.0",
] }
