[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frads"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "LBNL", email = "taoningwang@lbl.gov"},
]
description = "Framework for lighting and energy simulations"
dependencies = [
    "epmodel>=0.7.3",
    "numpy>=1.24.4",
    "pyradiance >= 0.5.3",
    "pywincalc>=3.1.0",
    "pyenergyplus_lbnl>=23.2.0",
    "scipy>=1.10.1",
]
license = {"file"= "license.txt"}
requires-python = ">= 3.8"

[project.scripts]
gen = "frads.cli:gen"
mrad = "frads.cli:mrad"

[tool.setuptools.dynamic]
version = {attr = "frads.__version__"}

[tool.ruff.pydocstyle]
convention = "google"
