[metadata]
name = frads
version = 0.2.6
description = Wrapper for Radiance simulation control
long_description = file: README.md, license.txt
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages_dir =
    =frads

[options.entry_points]
console_scripts = 
    mrad = frads.cli:mrad
    ep2rad = frads.cli:epjson2rad_cmd
    gengrid = frads.cli:gengrid
    rpxop = frads.cli:rpxop
    varays = frads.cli:varays
    genradroom = frads.cli:genradroom
    geombsdf = frads.geombsdf:main
    dctsnp = frads.cli:dctsnp
    glazing = frads.cli:glazing
    gencolorsky = frads.gencolorsky:main

[flake8]
max-line-length = 88
extend-ignore = E203

[pylint]
max-line-length = 88
