[metadata]
name = frads
version = attr:frads.__version__
description = Wrapper for Radiance simulation control
long_description = file: README.md, license.txt
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = frads

[options.entry_points]
console_scripts = 
    ep2rad = frads.cli:epjson2rad_cmd
    gencolorsky = frads.gencolorsky:main
    # geombsdf = frads.geombsdf:main
    gen = frads.cli:gen
    mrad = frads.cli:mrad
    rpxop = frads.cli:rpxop
    varays = frads.cli:varays

[flake8]
max-line-length = 88
extend-ignore = E203

